projects/compiler/test/typechecker/for/error_bad_range_start.out
Error at %FILE_NAME%:1:10
Type mismatch
  |  for x in "a":100 {
              ^
Expected: Int
but instead found: String
