projects/compiler/test/typechecker/for/error_bad_range_start.abra
for x in "a":100 {
  val _: Int = x
}